--- a/src/index.html
+++ b/src/index.html
@@ -27,6 +27,10 @@
     <load src="partials/header.html" />
     <load src="partials/team.html" />
 
+    <div class="div">
+      <img src="/img/team/team-1_desk@2x.png" alt="la" />
+    </div>
+
     <script type="module" src="/main.js"></script>
   </body>
 </html>
